# data_visualizer_backend

./: .flake8  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  local.env.sample  manage.py  pyproject.toml
.github/workflows/: django-ci.yml  merge-checker.yml  prod-ci.yml  staging-ci.yml
accounts/: admin.py  email.py  models.py  serializers.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/email/:  password_reset.html  activation.html  confirmation.html  password_changed_confirmation.html  username_changed_confirmation.html
data_importer/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
data_importer/migrations/: 0001_initial.py
email_sender/: admin.py  helper.py  models.py  serializers.py  urls.py  views.py
email_sender/migrations/: 0001_initial.py
email_sender_data/: asgi.py  router.py  settings.py  urls.py  wsgi.py
email_sender_data/management/commands/: add_email_recipients.py
funds/: helper.py  models.py  serializers.py  urls.py  views.py
